--- a/front/css/main.css
+++ b/front/css/main.css
@@ -12,10 +12,15 @@ header {
 .navbar-brand {
     margin: -10px 12px -10px 12px;
 }
+#navHeader {
+    background-color: #4682B4;
+    /* margin: 24px 0px;  */
+}
 .navbar-brand img {
     margin: -5px 10px 0px -28px; 
     height: 100px;
 }
+
 .navbar-brand h2 {
     font-family: 'Lora', serif;
     color: #696969;
@@ -83,8 +88,14 @@ footer {
     margin: -15px 20px -50px 20px;
     display: block;
 }
-/* Small devices */
-@media (min-width: 767px) and (max-width: 1205px) {
+/* Large devices */
+@media (min-width: 1220px) {
+    .navbar-brand {
+        margin-left: -5px;
+    }
+}
+/* Medium devices */
+@media (min-width: 767px) and (max-width: 1220px) {
     .navbar-brand img {
         width: 90%;
     }
@@ -94,6 +105,9 @@ footer {
     header {
         height: 130px;
     } 
+    .navbar-brand {
+        margin-left: -5px;
+    }
 }
 /* Extra Small devices */
 @media (max-width: 767px) {
@@ -107,12 +121,18 @@ footer {
         margin-top: 5px;
         margin-bottom: 0px;
     }
+    .navbar-header {
+        height: 100px;
+    }
     
 }
 /* Super Extra Small devices */
 @media (max-width: 620px) {
     #bottomBar p {
         margin-top: 50px;
+    }
+    .navbar-header {
+        height: 100px;
     }
     
 }
